Comandos escolhem a segmentacao, e o list mostra todas
O !fase aceita "busca | segmentacao" e o /fase ganhou um campo proprio.
Escolher pelo nome recomeca na primeira fase: o indice vinha de uma busca
por nome de fase noutro preset, onde apontaria para outra fase qualquer.

O list mostrava so as fases do primeiro preset de cada faixa, calado —
nenhuma tarefa do plano cobria isso.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>